--- a/curriculum/week-09/1.1-object-oriented-programming/w9d1-object-oriented-programming-lecture-aj.ipynb
+++ b/curriculum/week-09/1.1-object-oriented-programming/w9d1-object-oriented-programming-lecture-aj.ipynb
@@ -1573,6 +1573,10 @@
     "    def __init__(self):\n",
     "        self.cards = []\n",
     "        # YOUR CODE HERE\n",
+    "        for suit in range(4):\n",
+    "            for rank in range(1,14):\n",
+    "                card = Card(suit,rank)\n",
+    "                self.cards.append(card)\n",
     "        \n",
     "        "
    ]
@@ -1586,7 +1590,66 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ace of Clubs\n",
+      "2 of Clubs\n",
+      "3 of Clubs\n",
+      "4 of Clubs\n",
+      "5 of Clubs\n",
+      "6 of Clubs\n",
+      "7 of Clubs\n",
+      "8 of Clubs\n",
+      "9 of Clubs\n",
+      "10 of Clubs\n",
+      "Jack of Clubs\n",
+      "Queen of Clubs\n",
+      "King of Clubs\n",
+      "Ace of Diamonds\n",
+      "2 of Diamonds\n",
+      "3 of Diamonds\n",
+      "4 of Diamonds\n",
+      "5 of Diamonds\n",
+      "6 of Diamonds\n",
+      "7 of Diamonds\n",
+      "8 of Diamonds\n",
+      "9 of Diamonds\n",
+      "10 of Diamonds\n",
+      "Jack of Diamonds\n",
+      "Queen of Diamonds\n",
+      "King of Diamonds\n",
+      "Ace of Hearts\n",
+      "2 of Hearts\n",
+      "3 of Hearts\n",
+      "4 of Hearts\n",
+      "5 of Hearts\n",
+      "6 of Hearts\n",
+      "7 of Hearts\n",
+      "8 of Hearts\n",
+      "9 of Hearts\n",
+      "10 of Hearts\n",
+      "Jack of Hearts\n",
+      "Queen of Hearts\n",
+      "King of Hearts\n",
+      "Ace of Spades\n",
+      "2 of Spades\n",
+      "3 of Spades\n",
+      "4 of Spades\n",
+      "5 of Spades\n",
+      "6 of Spades\n",
+      "7 of Spades\n",
+      "8 of Spades\n",
+      "9 of Spades\n",
+      "10 of Spades\n",
+      "Jack of Spades\n",
+      "Queen of Spades\n",
+      "King of Spades\n"
+     ]
+    }
+   ],
    "source": [
     "# Your output should look like this:\n",
     "\n",
@@ -1721,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1769,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1781,7 +1844,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 of Hearts\n"
+      "Ace of Diamonds\n"
      ]
     }
    ],
@@ -1805,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1815,8 +1878,7 @@
    "outputs": [],
    "source": [
     "class Hand(Deck):\n",
-    "    '''Empty for now'''\n",
-    "    "
+    "    '''Empty for now'''"
    ]
   },
   {
@@ -1832,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1854,7 +1916,7 @@
        " 'sort']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1908,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1920,7 +1982,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 of Diamonds\n"
+      "Ace of Clubs\n"
      ]
     }
    ],
@@ -1950,36 +2012,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 of Clubs\n",
+      "10 of Diamonds\n",
+      "Ace of Clubs\n",
       "4 of Hearts\n",
-      "9 of Clubs\n",
-      "8 of Diamonds\n",
-      "7 of Spades\n",
+      "Queen of Spades\n",
+      "Ace of Hearts\n",
       "\n",
-      "8 of Hearts\n",
-      "Jack of Diamonds\n",
-      "5 of Diamonds\n",
-      "2 of Diamonds\n",
-      "Ace of Hearts\n"
+      "---------\n",
+      "\n",
+      "4 of Spades\n",
+      "10 of Hearts\n",
+      "3 of Clubs\n",
+      "7 of Spades\n",
+      "7 of Hearts\n"
      ]
     }
    ],
    "source": [
+    "hand1 = Hand()\n",
+    "hand2 = Hand()\n",
+    "\n",
+    "deck1 = Deck()\n",
+    "\n",
+    "# deal 5 cards, draw 1 card, add to players hand, repeat 5 times:\n",
+    "\n",
+    "for i in range(5):\n",
+    "    card1 = deck1.draw_card() # draw one card\n",
+    "    hand1.add_card(card1) # add card to hand1\n",
+    "    card2 = deck1.draw_card() # draw another card\n",
+    "    hand2.add_card(card2) # add card to hand 2\n",
     "\n",
     "\n",
-    "\n"
+    "print hand1\n",
+    "print '\\n---------\\n'\n",
+    "print hand2\n"
    ]
   },
   {
@@ -1998,43 +2073,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class War():\n",
-    "    '''Would you like to play a game?'''\n",
-    "    def __init__(self):\n",
-    "        \n",
-    "        \n",
-    "    def deal(self):\n",
-    "        \n",
-    "        \n",
-    "    def turn(self):"
+    "# 1. Randomly (shuffled) split deck into two hands\n",
+    "    # Each hand has 26 random cards\n",
+    "# 2. Each hand draws the top card \n",
+    "# 3. Compare cards\n",
+    "    # If one is higher, that player puts all cards on bottom of deck in random order\n",
+    "    # If equal, draw top three cards, compare 4th card\n",
+    "# 4. Ends when one hand has 52 cards   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Card():\n",
+    "    '''A standard playing card'''\n",
+    "    \n",
+    "    def __init__(self, suit=0, rank=2):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
+    "        \n",
+    "    suit_names = ['Clubs', 'Diamonds', 'Hearts', 'Spades']\n",
+    "    rank_names = [None, 'Ace', '2', '3', '4', '5', '6', '7', '8', \\\n",
+    "                 '9', '10', 'Jack', 'Queen', 'King']\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"%s of %s\" % (Card.rank_names[self.rank], \\\n",
+    "                            Card.suit_names[self.suit])\n",
+    "    \n",
+    "    def greater_than(self, other):\n",
+    "        # YOUR CODE HERE\n",
+    "        if other.rank == 1:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return self.rank > other.rank\n",
+    "        \n",
+    "    def is_equal(self, other):\n",
+    "        if self.rank == self.other:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-70-dd172db26b4e>, line 42)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-70-dd172db26b4e>\"\u001b[0;36m, line \u001b[0;32m42\u001b[0m\n\u001b[0;31m    return self.message\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "class War():\n",
+    "    '''Would you like to play a game?'''\n",
+    "    def __init__(self):\n",
+    "        self.newDeck = Deck()\n",
+    "        self.newDeck.shuffle()\n",
+    "        \n",
+    "        self.handone = Hand()\n",
+    "        self.handtwo = Hand()\n",
+    "        self.tableau = Hand()\n",
+    "        \n",
+    "    def deal(self):\n",
+    "        while len(self.newDeck.cards) > 0:\n",
+    "            self.handone.add_card(self.newDeck.draw_card())\n",
+    "            self.handtwo.add_card(self.newDeck.draw_card())\n",
+    "        return\n",
+    "        \n",
+    "    def turn(self):\n",
+    "        self.cardone = self.handone.cards.pop(-1)\n",
+    "        self.cardtwo = self.handtwo.cards.pop(-1)\n",
+    "        \n",
+    "        # check if the cards are equal\n",
+    "        # if it's true, then go to war\n",
+    "        # if it's false then see which is greater\n",
+    "    \n",
+    "    if self.cardone.is_equal(self.cardtwo):\n",
+    "        # the code for war\n",
+    "        # we have draw three top cards from each hand\n",
+    "        # then draw the fourth top card from each and compare\n",
+    "        # then either repeat or add the tableau randomly to the winner's hand\n",
+    "        self.message = 'war1'\n",
+    "    else:\n",
+    "        if self.cardone.greater_than(self.cardtwo):\n",
+    "            # giving the cards to hand one\n",
+    "            self.message='player 1 wins'\n",
+    "            # add self.cardone to self.cardtow into self.handone\n",
+    "            # they must go into the bottom of self.handone.cards\n",
+    "            # and they must go ont the bottom in random order\n",
+    "        else:\n",
+    "            # give the cards to hand two\n",
+    "            self.message = 'player 2 wins'\n",
+    "            \n",
+    "    return self.message\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "w = War()\n",
+    "w.deal()\n",
+    "w.turn()"
+   ]
   },
   {
    "cell_type": "markdown",
