--- a/curriculum/week-10/2.2-aws-intro/w10d2-aws-intro.ipynb
+++ b/curriculum/week-10/2.2-aws-intro/w10d2-aws-intro.ipynb
@@ -767,9 +767,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
