--- a/curriculum/week-10/2.2-aws-intro/w10d2-aws-intro.ipynb
+++ b/curriculum/week-10/2.2-aws-intro/w10d2-aws-intro.ipynb
@@ -765,10 +765,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
