--- a/curriculum/week-05/5.2-lab-titanic-features/code/starter-code/starter-code-4_2.ipynb
+++ b/curriculum/week-05/5.2-lab-titanic-features/code/starter-code/starter-code-4_2.ipynb
@@ -42,14 +42,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import gzip\n",
     "import dill\n",
     "\n",
-    "with gzip.open('../../../2.3-lab/assets/datasets/union.dill.gz') as fin:\n",
+    "with gzip.open('./assets/datasets/union.dill.gz') as fin:\n",
     "    union = dill.load(fin)\n",
     "    \n",
     "X = df[[u'Pclass', u'Sex', u'Age', u'SibSp', u'Parch', u'Fare', u'Embarked']]\n",
@@ -86,15 +86,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "new_cols = ['scaled_age', 'Pclass_1', 'Pclass_2', 'Pclass_3',\n",
-    "            'Embarked_C', 'Embarked_Q', 'Embarked_S',\n",
-    "            'male', 'scaled_fare']\n",
-    "\n",
-    "Xt = pd.DataFrame(X_transf, columns=new_cols)\n",
-    "Xt = pd.concat([Xt, X[[u'SibSp', u'Parch']]], axis = 1)\n",
-    "Xt.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -116,24 +108,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.feature_selection import SelectKBest, f_classif"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "selector = SelectKBest(f_classif, k=5)\n",
-    "selected_data = selector.fit_transform(Xt, y)\n",
-    "kbest_columns = Xt.columns[selector.get_support()]\n",
-    "Xtbest = pd.DataFrame(selected_data, columns=kbest_columns)\n",
-    "Xtbest.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -153,25 +128,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.feature_selection import RFECV\n",
-    "from sklearn.linear_model import LogisticRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "estimator = LogisticRegression()\n",
-    "selector = RFECV(estimator, step=1, cv=5)\n",
-    "selector = selector.fit(Xt, y)\n",
-    "rfecv_columns = Xt.columns[selector.support_]\n",
-    "rfecv_columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -196,70 +153,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.grid_search import GridSearchCV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model = GridSearchCV(LogisticRegression(), {'C': [0.001, 0.01, 0.1, 1.0, 10.0, 100.0],\n",
-    "                                            'penalty': ['l1', 'l2']})\n",
-    "model.fit(Xt, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model.best_estimator_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model.best_score_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "coeffs = pd.DataFrame(model.best_estimator_.coef_, columns = Xt.columns)\n",
-    "coeffs_t = coeffs.transpose()\n",
-    "coeffs_t.columns = ['Surv coeff']\n",
-    "coeffs_t.abs().sort_values('Surv coeff', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# keep the ones with coeff above 0.3\n",
-    "lr_columns = coeffs.columns[(coeffs.abs() > 0.3).values[0]]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,24 +180,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.cross_validation import cross_val_score\n",
-    "\n",
-    "def score(X):\n",
-    "    scores = cross_val_score(model.best_estimator_, X, y)\n",
-    "    return scores.mean(), scores.std()\n",
-    "\n",
-    "all_scores = [\n",
-    "    score(Xt[kbest_columns]),\n",
-    "    score(Xt[rfecv_columns]),\n",
-    "    score(Xt[lr_columns]),\n",
-    "    score(Xt)]\n",
-    "\n",
-    "pd.DataFrame(all_scores, columns=['mean score', 'std score'], index = ['kbest', 'rfecv', 'lr', 'all'])\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -312,17 +192,6 @@
     "## Bonus\n",
     "\n",
     "Use a bar chart to display the logistic regression coefficients. Start from the most negative on the left."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "coeffs_t.sort_values('Surv coeff').plot(kind='bar')"
    ]
   },
   {
