--- a/curriculum/week-11/2.1-rec-engines/w11d2-rec-engines-aj.ipynb
+++ b/curriculum/week-11/2.1-rec-engines/w11d2-rec-engines-aj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -916,6 +916,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [default]",
