--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -425,21 +425,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SpotifyOauthError",
-     "evalue": "No client id",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSpotifyOauthError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-9fbfd6d12897>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mclient_credentials_manager\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSpotifyClientCredentials\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0msp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspotipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSpotify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient_credentials_manager\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclient_credentials_manager\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/andrewjeong/anaconda/lib/python2.7/site-packages/spotipy/oauth2.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, client_id, client_secret)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mclient_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mSpotifyOauthError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No client id'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mclient_secret\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSpotifyOauthError\u001b[0m: No client id"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-f', '/Users/andrewjeong/Library/Jupyter/runtime/kernel-cb826519-cfad-4aef-ae61-26760cb2b7fa.json']\n",
+      "\n",
+      "headers {'Content-Type': 'application/json', 'Authorization': 'Bearer BQCvkgyBeNUMS_NYcEjvGGVpa0wmIa8Afhs1SzaEWd5VGMBQEBZc00QMKcMGu8TENKyS33lkfDQswnYRtQSV7g'}\n",
+      "http status 200\n",
+      "GET https://api.spotify.com/v1/audio-features?ids=-f,kernel-cb826519-cfad-4aef-ae61-26760cb2b7fa.json\n",
+      "RESP {u'audio_features': [None, None]}\n",
+      "\n",
+      "[\n",
+      "    null, \n",
+      "    null\n",
+      "]\n",
+      "features retrieved in 0.18 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning:expected id of type track but found type runtime /Users/andrewjeong/Library/Jupyter/runtime/kernel-cb826519-cfad-4aef-ae61-26760cb2b7fa.json\n"
      ]
     }
    ],
@@ -452,7 +465,7 @@
     "import sys\n",
     "\n",
     "\n",
-    "client_credentials_manager = SpotifyClientCredentials()\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id='9342202d7b4640c8aa49d83b62b570ba',client_secret='9c08dfa4279348dda0d13d410a762728')\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
     "sp.trace=True\n",
     "\n",
@@ -465,6 +478,44 @@
     "    delta = time.time() - start\n",
     "    print(json.dumps(features, indent=4))\n",
     "    print (\"features retrieved in %.2f seconds\" % (delta,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\r\n",
+      "  \"danceability\" : 0.474,\r\n",
+      "  \"energy\" : 0.741,\r\n",
+      "  \"key\" : 6,\r\n",
+      "  \"loudness\" : -3.690,\r\n",
+      "  \"mode\" : 1,\r\n",
+      "  \"speechiness\" : 0.111,\r\n",
+      "  \"acousticness\" : 0.0602,\r\n",
+      "  \"instrumentalness\" : 0,\r\n",
+      "  \"liveness\" : 0.115,\r\n",
+      "  \"valence\" : 0.429,\r\n",
+      "  \"tempo\" : 174.100,\r\n",
+      "  \"type\" : \"audio_features\",\r\n",
+      "  \"id\" : \"19a3JfW8BQwqHWUMbcqSx8\",\r\n",
+      "  \"uri\" : \"spotify:track:19a3JfW8BQwqHWUMbcqSx8\",\r\n",
+      "  \"track_href\" : \"https://api.spotify.com/v1/tracks/19a3JfW8BQwqHWUMbcqSx8\",\r\n",
+      "  \"analysis_url\" : \"https://api.spotify.com/v1/audio-analysis/19a3JfW8BQwqHWUMbcqSx8\",\r\n",
+      "  \"duration_ms\" : 196040,\r\n",
+      "  \"time_signature\" : 4\r\n",
+      "}"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -X GET \"https://api.spotify.com/v1/audio-features/19a3JfW8BQwqHWUMbcqSx8\" -H \"Accept: application/json\" -H \"Authorization: Bearer BQCno_hNE7AK6sFFs87yEUpIGUWXjlahJxZ0cmvMy2rbZjgdCs3AOhcBdG5b7X8xDOUbH3TydO3J9fPDn2kZGETA_rRm5ZOWZkynX7HdC6urWRswpsKN8bYQySY-O1tcAahOPb0PidRlsyI\"\n"
    ]
   },
   {
