--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -45,8 +45,8 @@
       "  10 California Kids\n",
       "  11 My Name Is Jonas\n",
       "  12 Undone - The Sweater Song\n",
-      "  13 Do You Wanna Get High?\n",
-      "  14 Say It Ain't So\n",
+      "  13 Say It Ain't So\n",
+      "  14 Do You Wanna Get High?\n",
       "  15 My Name Is Jonas\n",
       "  16 Buddy Holly\n",
       "  17 Jacked Up\n",
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   0 Kanye 5brMyscUnQg14hMriS91ks\n",
+      "  0 Kanye 5brMyscUnQg14hMriS91ks\n",
       "  1 Father Stretch My Hands Pt. 1 4KW1lqgSr8TKrvBII0Brf8\n",
       "  2 Famous 19a3JfW8BQwqHWUMbcqSx8\n",
       "  3 I Love Kanye 5CGS4UovzA7ftCJkLVXQju\n",
@@ -83,8 +83,8 @@
       "  5 Waves 3nAq2hCr1oWsIU54tS98pL\n",
       "  6 Tiimmy Turner - Remix 2vwvGMStv1nEuoOTd4xgMu\n",
       "  7 Stronger 6C7RJEIUDqKkJRZVWdkfkH\n",
-      "  8 Pt. 2 1Wsbr1d2BouNGk2q92mIj7\n",
-      "  9 Ultralight Beam 1eQBEelI2NCy7AUTerX0KS\n"
+      "  8 Ultralight Beam 1eQBEelI2NCy7AUTerX0KS\n",
+      "  9 Pt. 2 1Wsbr1d2BouNGk2q92mIj7\n"
      ]
     }
    ],
@@ -135,18 +135,18 @@
        "   u'uri': u'spotify:artist:5K4W6rqBFWDnAN6FQUkS6x'}],\n",
        " u'available_markets': [u'CA', u'MX', u'US'],\n",
        " u'disc_number': 1,\n",
-       " u'duration_ms': 320680,\n",
+       " u'duration_ms': 130293,\n",
        " u'explicit': True,\n",
-       " u'external_ids': {u'isrc': u'USUM71603065'},\n",
-       " u'external_urls': {u'spotify': u'https://open.spotify.com/track/1eQBEelI2NCy7AUTerX0KS'},\n",
-       " u'href': u'https://api.spotify.com/v1/tracks/1eQBEelI2NCy7AUTerX0KS',\n",
-       " u'id': u'1eQBEelI2NCy7AUTerX0KS',\n",
-       " u'name': u'Ultralight Beam',\n",
+       " u'external_ids': {u'isrc': u'USUM71603069'},\n",
+       " u'external_urls': {u'spotify': u'https://open.spotify.com/track/1Wsbr1d2BouNGk2q92mIj7'},\n",
+       " u'href': u'https://api.spotify.com/v1/tracks/1Wsbr1d2BouNGk2q92mIj7',\n",
+       " u'id': u'1Wsbr1d2BouNGk2q92mIj7',\n",
+       " u'name': u'Pt. 2',\n",
        " u'popularity': 74,\n",
-       " u'preview_url': u'https://p.scdn.co/mp3-preview/ac72493a5aa36000a9ce2dc5eb6f94e4f862f761',\n",
-       " u'track_number': 1,\n",
+       " u'preview_url': u'https://p.scdn.co/mp3-preview/07d650b0dc0ae5909d805c3e9f7eeb8883ba7aec',\n",
+       " u'track_number': 3,\n",
        " u'type': u'track',\n",
-       " u'uri': u'spotify:track:1eQBEelI2NCy7AUTerX0KS'}"
+       " u'uri': u'spotify:track:1Wsbr1d2BouNGk2q92mIj7'}"
       ]
      },
      "execution_count": 6,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -197,8 +197,8 @@
       "Graduation\n",
       "Graduation\n",
       "808s & Heartbreak\n",
-      "808s & Heartbreak\n",
       "808s & Heartbreak (UK Version)\n",
+      "808s & Heartbreak\n",
       "808s & Heartbreak (Softpak)\n",
       "Graduation (French Limited Version)\n",
       "Late Orchestration\n",
@@ -207,8 +207,8 @@
       "Late Registration\n",
       "Late Registration\n",
       "Late Registration\n",
-      "The College Dropout (Explicit)\n",
       "The College Dropout [UK Version - (Art changes)]\n",
+      "The College Dropout (Explicit)\n",
       "The College Dropout (Explicit)\n",
       "The College Dropout (Edited)\n",
       "The College Dropout (Edited)\n"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -327,23 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "SpotifyException",
-     "evalue": "http status: 404, code:-1 - https://api.spotify.com/v1/search?q=artist%3A-f+%2FUsers%2Fandrewjeong%2FLibrary%2FJupyter%2Fruntime%2Fkernel-05c5749e-526f-42c4-9dd6-8139ce95033d.json&type=artist&limit=10&offset=0:\n Not found.",
+     "evalue": "http status: 404, code:-1 - https://api.spotify.com/v1/search?q=artist%3A-f+%2FUsers%2Fandrewjeong%2FLibrary%2FJupyter%2Fruntime%2Fkernel-c023a40f-ed8b-440a-b3ec-d95482f33847.json&type=artist&limit=10&offset=0:\n Not found.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mSpotifyException\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-02e7e55996e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Radiohead'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspotify\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'artist:'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'artist'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'artists'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-02e7e55996e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Radiohead'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspotify\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'artist:'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'artist'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'artists'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/andrewjeong/anaconda/lib/python2.7/site-packages/spotipy/client.pyc\u001b[0m in \u001b[0;36msearch\u001b[0;34m(self, q, limit, offset, type)\u001b[0m\n\u001b[1;32m    321\u001b[0m                          \u001b[0;34m'track'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'playlist'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    322\u001b[0m         '''\n\u001b[0;32m--> 323\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'search'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moffset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    324\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    325\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/andrewjeong/anaconda/lib/python2.7/site-packages/spotipy/client.pyc\u001b[0m in \u001b[0;36m_get\u001b[0;34m(self, url, args, payload, **kwargs)\u001b[0m\n\u001b[1;32m    131\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mretries\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_internal_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GET'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    134\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mSpotifyException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m                 \u001b[0mretries\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/andrewjeong/anaconda/lib/python2.7/site-packages/spotipy/client.pyc\u001b[0m in \u001b[0;36m_internal_call\u001b[0;34m(self, method, url, payload, params)\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'null'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m                 raise SpotifyException(r.status_code,\n\u001b[0;32m--> 111\u001b[0;31m                     -1, '%s:\\n %s' % (r.url, r.json()['error']['message']))\n\u001b[0m\u001b[1;32m    112\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m                 raise SpotifyException(r.status_code,\n",
-      "\u001b[0;31mSpotifyException\u001b[0m: http status: 404, code:-1 - https://api.spotify.com/v1/search?q=artist%3A-f+%2FUsers%2Fandrewjeong%2FLibrary%2FJupyter%2Fruntime%2Fkernel-05c5749e-526f-42c4-9dd6-8139ce95033d.json&type=artist&limit=10&offset=0:\n Not found."
+      "\u001b[0;31mSpotifyException\u001b[0m: http status: 404, code:-1 - https://api.spotify.com/v1/search?q=artist%3A-f+%2FUsers%2Fandrewjeong%2FLibrary%2FJupyter%2Fruntime%2Fkernel-c023a40f-ed8b-440a-b3ec-d95482f33847.json&type=artist&limit=10&offset=0:\n Not found."
      ]
     }
    ],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -492,24 +492,10 @@
      "output_type": "stream",
      "text": [
       "{\r\n",
-      "  \"danceability\" : 0.474,\r\n",
-      "  \"energy\" : 0.741,\r\n",
-      "  \"key\" : 6,\r\n",
-      "  \"loudness\" : -3.690,\r\n",
-      "  \"mode\" : 1,\r\n",
-      "  \"speechiness\" : 0.111,\r\n",
-      "  \"acousticness\" : 0.0602,\r\n",
-      "  \"instrumentalness\" : 0,\r\n",
-      "  \"liveness\" : 0.115,\r\n",
-      "  \"valence\" : 0.429,\r\n",
-      "  \"tempo\" : 174.100,\r\n",
-      "  \"type\" : \"audio_features\",\r\n",
-      "  \"id\" : \"19a3JfW8BQwqHWUMbcqSx8\",\r\n",
-      "  \"uri\" : \"spotify:track:19a3JfW8BQwqHWUMbcqSx8\",\r\n",
-      "  \"track_href\" : \"https://api.spotify.com/v1/tracks/19a3JfW8BQwqHWUMbcqSx8\",\r\n",
-      "  \"analysis_url\" : \"https://api.spotify.com/v1/audio-analysis/19a3JfW8BQwqHWUMbcqSx8\",\r\n",
-      "  \"duration_ms\" : 196040,\r\n",
-      "  \"time_signature\" : 4\r\n",
+      "  \"error\": {\r\n",
+      "    \"status\": 401,\r\n",
+      "    \"message\": \"The access token expired\"\r\n",
+      "  }\r\n",
       "}"
      ]
     }
@@ -517,6 +503,24 @@
    "source": [
     "!curl -X GET \"https://api.spotify.com/v1/audio-features/19a3JfW8BQwqHWUMbcqSx8\" -H \"Accept: application/json\" -H \"Authorization: Bearer BQCno_hNE7AK6sFFs87yEUpIGUWXjlahJxZ0cmvMy2rbZjgdCs3AOhcBdG5b7X8xDOUbH3TydO3J9fPDn2kZGETA_rRm5ZOWZkynX7HdC6urWRswpsKN8bYQySY-O1tcAahOPb0PidRlsyI\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-ff3ffc88d988>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-ff3ffc88d988>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    curl -X GET \"https://api.spotify.com/v1/audio-features\" -H \"Accept: application/json\" -H \"Authorization: Bearer BQCno_hNE7AK6sFFs87yEUpIGUWXjlahJxZ0cmvMy2rbZjgdCs3AOhcBdG5b7X8xDOUbH3TydO3J9fPDn2kZGETA_rRm5ZOWZkynX7HdC6urWRswpsKN8bYQySY-O1tcAahOPb0PidRlsyI\"\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -546,6 +550,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {
+    "height": "30px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
