--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,45 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0 Famous\n",
-      "  1 Almost Famous\n",
-      "  2 Famous Last Words\n",
-      "  3 I Get the Drip from My Walk\n",
-      "  4 Marvin & Chardonnay\n",
-      "  5 Lifestyles of the Rich & Famous\n",
-      "  6 Dance (A$$)\n",
-      "  7 Almost Famous\n",
-      "  8 Young Blood\n",
-      "  9 Famous\n",
-      "  10 Took Time\n",
-      "  11 Famous\n",
-      "  12 Glock\n",
-      "  13 Famous\n",
-      "  14 Almost Famous\n",
-      "  15 Higher\n",
-      "  16 Hit Em wit It\n",
-      "  17 2 Times\n",
-      "  18 My Last\n",
-      "  19 Famous\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Artist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Let It Go</td>\n",
+       "      <td>Frozen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Happy</td>\n",
+       "      <td>Pharrell Williams</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uptown Funk</td>\n",
+       "      <td>Mark Ronson feat. Bruno Mars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Shake It off</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>All About That Bass</td>\n",
+       "      <td>Meghan Trainor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Title                        Artist\n",
+       "0            Let It Go                        Frozen\n",
+       "1                Happy             Pharrell Williams\n",
+       "2          Uptown Funk  Mark Ronson feat. Bruno Mars\n",
+       "3         Shake It off                  Taylor Swift\n",
+       "4  All About That Bass                Meghan Trainor"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import spotipy\n",
-    "sp = spotipy.Spotify()\n",
-    "\n",
-    "results = sp.search(q='famous', limit=20)\n",
-    "for i, t in enumerate(results['tracks']['items']):\n",
-    "    print ' ', i, t['name']"
+    "tks = pd.read_excel('/Users/andrewjeong/Downloads/TopKaraokeSongs.xlsx')\n",
+    "tks.head()"
    ]
   },
   {
@@ -50,7 +87,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import spotipy\n",
+    "sp = spotipy.Spotify()\n",
+    "\n",
+    "for x in \n",
+    "results = sp.search(q='x', limit=20)\n",
+    "for i, t in enumerate(results['tracks']['items']):\n",
+    "    print ' ', i, t['name']"
+   ]
   }
  ],
  "metadata": {
@@ -71,6 +116,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {
+    "height": "12px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
