--- a/projects/projects-weekly/project-07/starter-code/project7- Airport - AJ.ipynb
+++ b/projects/projects-weekly/project-07/starter-code/project7- Airport - AJ.ipynb
@@ -4142,7 +4142,7 @@
    "source": [
     "from scipy.cluster.hierarchy import dendrogram, linkage, cophenet, fcluster\n",
     "from scipy.spatial import distance as ssd\n",
-    "from scipy.spatial.distance import pdist\n"
+    "from scipy.spatial.distance import pdist"
    ]
   },
   {
@@ -4232,6 +4232,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {
+    "height": "282px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
