--- a/curriculum/week-01/2.1-github-intro/w1d1-git-intro-lecture.ipynb
+++ b/curriculum/week-01/2.1-github-intro/w1d1-git-intro-lecture.ipynb
@@ -675,9 +675,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -692,6 +693,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "toc": {
+   "nav_menu": {
+    "height": "455px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
