--- a/curriculum/week-02/2.1-pandas-intro-2/w2d2-pandas-intro-two-lecture.ipynb
+++ b/curriculum/week-02/2.1-pandas-intro-2/w2d2-pandas-intro-two-lecture.ipynb
@@ -7055,10 +7055,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -7073,19 +7072,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
-  },
-  "toc": {
-   "nav_menu": {
-    "height": "512px",
-    "width": "252px"
-   },
-   "navigate_menu": true,
-   "number_sections": true,
-   "sideBar": true,
-   "threshold": 4,
-   "toc_cell": false,
-   "toc_section_display": "block",
-   "toc_window_display": false
   }
  },
  "nbformat": 4,
