--- a/curriculum/week-03/1.3-linear-regression-scikit-statsmodels/code/starter-code/w3d1-linear-regression-lecture-workbook.ipynb
+++ b/curriculum/week-03/1.3-linear-regression-scikit-statsmodels/code/starter-code/w3d1-linear-regression-lecture-workbook.ipynb
@@ -1324,10 +1324,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1342,19 +1341,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
-  },
-  "toc": {
-   "nav_menu": {
-    "height": "239px",
-    "width": "252px"
-   },
-   "navigate_menu": true,
-   "number_sections": true,
-   "sideBar": true,
-   "threshold": 4,
-   "toc_cell": false,
-   "toc_section_display": "block",
-   "toc_window_display": false
   }
  },
  "nbformat": 4,
